--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/DanyCorVal/hackathon_the_ocean_webapi#readme",
   "devDependencies": {
     "eslint": "^8.15.0",
+    "express": "^4.18.1",
     "jest": "^28.1.0"
   }
 }
