--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "devDependencies": {
     "eslint": "^8.15.0",
     "express": "^4.18.1",
-    "jest": "^28.1.0"
+    "jest": "^28.1.0",
+    "prisma": "^3.14.0"
   }
 }
