--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,16 +1,16 @@
-name: Run Tests in my project every push on GitHub
+#name: Run Tests in my project every push on GitHub
 
-on: [push]
+#on: [push]
 
-jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v1
-    # Install required deps for action
-    - name: Install Dependencies
-      run: npm install
+#jobs:
+ # build:
+  #  runs-on: ubuntu-latest
+   # steps:
+    #- uses: actions/checkout@v1
+    ## Install required deps for action
+    #- name: Install Dependencies
+     # run: npm install
 
-    # Finally, run our tests
-    - name: Run the tests
-      run: npm test
+    # #Finally, run our tests
+    #- name: Run the tests
+     # run: npm test
