--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "server": "node ./lib/server.js",
     "test": "node ./node_modules/.bin/jest",
+    "build": "node ./lib/server.js",
     "linter": "node ./node_modules/eslint/bin/eslint.js .",
     "linter-fix": "node ./node_modules/eslint/bin/eslint.js . --fix",
     "postinstall": "prisma generate"
